src/Opravilo.Web/app/src/components/column-state-view/state-column/state-column.scss
.state-column {
  //display: inline-block;
  width: 350px;
  
  background-color: lightgray;
  border-radius: 3px;
  //margin-right: 10px;
  padding: 5px;
  
  header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 5px 0 5px;
    
    h2 {
      font-weight: 600;
      color: dimgray;
    }
    
    .dots {
      font-size: 16px;
      color: gray;
      cursor: pointer;
    }
  }
  
  .column-body {
    .ant-space {
      width: 100%;
    }
    
    .card-preview {
      background-color: white;
      border-radius: 3px;
      padding: 5px;
      display: inline-block;
      width: 100%;
      white-space: normal;
      
      .grabbable {
        cursor: grab;
        float: right;
        visibility: hidden;
        opacity: 0;
      }
      
      .grabbable:active {
        cursor: grabbing;
      }
    }
    
    .card-preview:hover {
      .grabbable {
        transition: opacity 0.2s;
        visibility: visible;
        opacity: 1;
      }
    }
  }

  .ant-space-item {
    .add-card-button {
      width: 100%;
      color: gray;
      border-color: gray;
    } 
  }
}

